# dragen_align_pa

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  README_developer.md  README_lead.md  pyproject.toml  workflow_dag.dot
.github/workflows/: build_deploy_main.yaml  dev_auto_build.yaml  docker.yaml  get_version.py  lint.yaml  pull_request.yaml  test.yaml
config/: dragen_align_pa_defaults.toml  dragen_align_pa_mackenzie_cre.toml  dragen_align_pa_mackenzie_crev2.toml  dragen_align_pa_mackenzie_twist.toml
docs/: dragen_guide.md  dragen_pipeline_reference.md  example_cohort_batches.json
docs/superpowers/plans/: 2026-05-11-unified-dragen-pipeline.md  2026-05-14-pr47-copilot-feedback.md  2026-05-19-delete-data-in-ica-rewrite.md
docs/superpowers/specs/: 2026-05-11-unified-dragen-pipeline-design.md  2026-05-19-delete-data-in-ica-rewrite-design.md
images/: dragen_align_pa.Dockerfile
scripts/: build_cnv_panel_of_normals.py
src/dragen_align_pa/: batch_constants.py  batches.py  config_template.toml  constants.py  constants_registry.py  file_types.py  ica_api_utils.py  ica_cli_utils.py  ica_utils.py  paths.py  run_workflow.py  stages.py  stages_fastq.py  utils.py  validator.py
src/dragen_align_pa/constants/: batch_constants.py  constants.py  constants_registry.py  ica_constants.py
src/dragen_align_pa/jobs/: cancel_ica_pipeline_run.py  delete_data_in_ica.py  download_batch_artefacts.py  download_ica_pipeline_outputs.py  download_md5_results.py  download_specific_files_from_ica.py  fastq_intake_qc.py  gemini_download_ica_pipeline_outputs.py  gemini_download_specific_files_from_ica.py  gemini_ica_pipeline_manager.py  gemini_manage_dragen_mlr.py  gemini_manage_dragen_pipeline.py  gemini_upload_data_to_ica.py  ica_pipeline_manager.py  ica_status_provider.py  make_fastq_file_list.py  manage_dragen_mlr.py  manage_dragen_pipeline.py  manage_md5_pipeline.py  monitor_dragen_pipeline.py  parse_passfail.py  prepare_ica_for_analysis.py  reheader_mlr_gvcf.py  run_align_genotype_with_dragen.py  run_dragen_mlr.py  run_intake_qc_pipeline.py  run_multiqc.py  somalier_extract.py  submit_dragen_batch.py  upload_data_to_ica.py  upload_fastq_file_list.py  validate_md5_sums.py
test/: conftest.py  test_helpers.py
tests/: _config_helpers.py  conftest.py  test_batches.py  test_build_cnv_panel_of_normals.py  test_constants.py  test_constants_registry.py  test_delete_data_in_ica.py  test_download_batch_artefacts.py  test_enable_cyp2d6.py  test_ica_api_utils.py  test_ica_cli_utils.py  test_ica_list_files.py  test_ica_list_recursive.py  test_ica_path.py  test_ica_path_normalisation.py  test_ica_pipeline_manager.py  test_ica_pipeline_manager_ar_guid.py  test_ica_status_provider.py  test_ica_utils.py  test_manage_dragen_manifest.py  test_manage_dragen_mlr.py  test_manage_dragen_pipeline.py  test_manage_md5_pipeline.py  test_passfail_parsing.py  test_path_resolution.py  test_prepare_ica_for_analysis.py  test_submit_dragen_batch.py  test_utils.py  test_validator.py
tests/fixtures/: generate_demo_bundle.py
